# parallel-map-reduce-word-counter-for-one-machine

./: CMakeLists.txt  README.md  main.cpp  test
src/: main.cpp
